fix: adjust the vertical alignment of the badge

--- a/paper/bootstrap.css
+++ b/paper/bootstrap.css
@@ -7469,7 +7469,7 @@ input[type="checkbox"]:disabled:checked:after,
   color: #fff;
 }
 .badge {
-  padding: 3px 6px 5px;
+  padding: 4px 6px 4px;
 }
 .progress {
   position: relative;
