--- a/paper/bootswatch.less
+++ b/paper/bootswatch.less
@@ -506,7 +506,7 @@ input[type="checkbox"],
 }
 
 .badge {
-  padding: 3px 6px 5px;
+  padding: 4px 6px 4px;
 }
 
 .progress {
